--- a/views/user/upcoming-movies.hbs
+++ b/views/user/upcoming-movies.hbs
@@ -10,42 +10,27 @@
             </div>
             <div class="w3l-populohny-grids">
                 {{#each upcomingMovies}}
-                <div class="item vhny-grid">
-                    <div class="box16">
-                        <figure>
-                            <img class="" src="/images/movies/upcoming-movies/posters/{{this._id}}.jpg" alt=""
-                                style="height: 25rem; object-fit: cover !important;">
-                        </figure>
-                        <div class="box-content">
-                            <h3 class="title">{{this.movieTitle}}</h3>
-                            <h4>
-                                <span class="post"><span class="fa fa-clock-o"> Run Time : </span> {{this.runTime}}</span>
-                            </h4>
-                            <h4>
-                                <span class="post">Release : {{this.releaseDate}}</span>
-                            </h4>
-                            <h4>
-                                <span
-                                    class="post bg-warning text-dark font-weight-bold text-truncate rounded px-3">{{this.type}}</span>
-                            </h4>
-                            <div class="row mt-5">
-                                <div class="col text-center">
-                                    <a href="/view-upcoming-movie?movieId={{this._id}}"
-                                        class="btn btn-info text-uppercase font-weight-bold btn-sm rounded-pill px-5">View</a>
-                                </div>
+                <a href="/view-upcoming-movie?movieId={{this._id}}" class="animate-up-8">
+                    <div class="item vhny-grid shadow-soft">
+                        <div class="box16">
+                            <figure>
+                                <img class="rounded" src="/images/movies/upcoming-movies/posters/{{this._id}}.jpg"
+                                    style="height: 25rem; object-fit: cover !important;">
+                            </figure>
+                            <div class="box-content">
+                                <h3 class="title">{{this.movieTitle}}</h3>
+                                <h4>
+                                    <span class="post"><span class="fa fa-clock-o"> Run Time : </span>
+                                        {{this.runTime}}</span>
+                                </h4>
+                                <h4>
+                                    <span
+                                        class="post bg-warning text-dark font-weight-bold text-truncate rounded px-3">{{this.type}}</span>
+                                </h4>
                             </div>
                         </div>
-                        <a href="#small-dialog{{this._id}}" class="popup-with-zoom-anim play-view1">
-                            <span class="fa fa-play video-icon" aria-hidden="true"></span>
-                        </a>
-                        <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
-                        <div id="small-dialog{{this._id}}" class="zoom-anim-dialog mfp-hide small-dialog">
-                            <iframe src="{{this.trailerLink}}" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
                     </div>
-                </div>
+                </a>
                 {{/each}}
             </div>
         </div>
