--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -9,25 +9,25 @@
                             <div class="col-md-4 col-sm-6 sub-two-right mt-5">
                                 <h6>Movies</h6>
                                 <ul>
-                                    <li><a href="/">Movies</a></li>
-                                    <li><a href="/">Genre</a></li>
+                                    <li><a class="shadow-none" href="/">Movies</a></li>
+                                    <li><a class="shadow-none" href="/">Genre</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-4 col-sm-6 sub-two-right mt-5">
                                 <h6>Information</h6>
                                 <ul>
-                                    <li><a href="/">Home</a> </li>
+                                    <li><a class="shadow-none" href="/">Home</a> </li>
                                     {{#if user}}
-                                    <li><a type="button" onclick="logout(event, '/logout')">Logout</a> </li>
+                                    <li><a class="shadow-none" type="button" onclick="logout(event, '/logout')">Logout</a> </li>
                                     {{else}}
-                                    <li><a href="/login">Login</a> </li>
+                                    <li><a class="shadow-none" href="/login">Login</a> </li>
                                     {{/if}}
                                 </ul>
                             </div>
                             <div class="col-md-4 col-sm-6 sub-two-right mt-5">
                                 <h6>Locations</h6>
                                 <ul>
-                                    <li><a href="/">India</a></li>
+                                    <li><a class="shadow-none" href="/">India</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -40,18 +40,18 @@
             <div class="container">
                 <div class="copyright-footer">
                     <div class="columns text-lg-left">
-                        <p>&copy; 2020 MovieMaster. All rights reserved | Developed by <a
+                        <p>&copy; 2021 MovieMaster. All rights reserved | Developed by <a class="shadow-none"
                                 href="/">Vishnu C Prasad</a></p>
                     </div>
 
                     <ul class="social text-lg-right">
-                        <li><a href="/"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                        <li><a class="shadow-none" href="/"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                         </li>
-                        <li><a href="/"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
+                        <li><a class="shadow-none" href="/"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
                         </li>
-                        <li><a href="/"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+                        <li><a class="shadow-none" href="/"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                         </li>
-                        <li><a href="/"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
+                        <li><a class="shadow-none" href="/"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
                         </li>
 
                     </ul>
@@ -63,28 +63,6 @@
         <button onclick="topFunction()" id="movetop" title="Go to top">
             <span class="fa fa-arrow-up" aria-hidden="true"></span>
         </button>
-        <script>
-            // When the user scrolls down 20px from the top of the document, show the button
-            window.onscroll = function () {
-                scrollFunction()
-            };
-
-            function scrollFunction() {
-                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                    document.getElementById("movetop").style.display = "block";
-                } else {
-                    document.getElementById("movetop").style.display = "none";
-                }
-            }
-
-            // When the user clicks on the button, scroll to the top of the document
-            function topFunction() {
-                document.body.scrollTop = 0;
-                document.documentElement.scrollTop = 0;
-            }
-        </script>
-        <!-- /move top -->
-
     </section>
 </footer>
 <!--//footer-66 -->
