--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5575,21 +5575,40 @@ input[type="checkbox"]:checked:before {
   animation-delay: 375ms;
 }
 
-#editProfileLoadingBtn span:nth-child(1) {
+#editPersonalInfoLoadingBtn span:nth-child(1) {
   animation-delay: 75ms;
 }
-#editProfileLoadingBtn span:nth-child(2) {
+#editPersonalInfoLoadingBtn span:nth-child(2) {
   animation-delay: 150ms;
 }
 
-#editProfileLoadingBtn span:nth-child(3) {
+#editPersonalInfoLoadingBtn span:nth-child(3) {
   animation-delay: 225ms;
 }
 
-#editProfileLoadingBtn span:nth-child(4) {
+#editPersonalInfoLoadingBtn span:nth-child(4) {
   animation-delay: 300ms;
 }
 
-#editProfileLoadingBtn span:nth-child(5) {
+#editPersonalInfoLoadingBtn span:nth-child(5) {
+  animation-delay: 375ms;
+}
+
+#editMobileLoadingBtn span:nth-child(1) {
+  animation-delay: 75ms;
+}
+#editMobileLoadingBtn span:nth-child(2) {
+  animation-delay: 150ms;
+}
+
+#editMobileLoadingBtn span:nth-child(3) {
+  animation-delay: 225ms;
+}
+
+#editMobileLoadingBtn span:nth-child(4) {
+  animation-delay: 300ms;
+}
+
+#editMobileLoadingBtn span:nth-child(5) {
   animation-delay: 375ms;
 }
