--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -69,7 +69,7 @@
                             </button>
                         </form>
                         <form class="mt-4" id="verificationForm" style="display: none;">
-                            <div class="form-group">
+                            <div class="form-group" hidden>
                                 <label for="mobileInput">mobile</label>
                                 <div class="input-group mb-4">
                                     <div class="input-group-prepend">
@@ -79,6 +79,8 @@
                                     <input class="form-control" id="verificationMobileInput" type="text" name="mobile"
                                         aria-label="mobile" required>
                                 </div>
+                            </div>
+                            <div class="form-group">
                                 <label for="otpInput">OTP</label>
                                 <div class="input-group mb-4">
                                     <div class="input-group-prepend">
