--- a/views/user/my-orders.hbs
+++ b/views/user/my-orders.hbs
@@ -1,56 +1,51 @@
 {{#if orders}}
-<section>
-    <div class="container my-5 pt-5">
-        <div>
-            <div class="card-body">
-                <div class="headerhny-title">
-                    <div class="w3l-title-grids">
-                        <div class="headerhny-left">
-                            <h3 class="hny-title">My Orders</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    {{#each orders}}
-                    <div class="col-lg-4 col-md-6">
-                        <a href="/view-order?orderId={{this._id}}" class="text-info">
-                            <div class="card_shadow pill_enlarge-lg mb-3 rounded">
-                                <div class="text-white" style="background-color: #ababab;">
-                                    <p class="text-center">{{this.orderDate}}</p>
-                                </div>
-                                <div class="row no-gutters">
-                                    <div class="col-md-4">
-                                        <img src="/images/movies/posters/{{this.movieDetails._id}}.jpg" class="card-img"
-                                            style="height: 100%; object-fit: cover;">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body p-0">
-                                            <h6 class="card-title text-truncate bg-info text-white text-center mb-1 py-1">
-                                                {{this.movieDetails.movieTitle}}</h6>
-                                            <div class="px-3 py-1">
-                                                <p class="card-text text-primary text-truncate mb-2">
-                                                    {{this.theatreDetails.theatreName}} |
-                                                    {{this.showDetails.screenName}}</p>
-                                                <p class="text-truncate"><span class="font-weight-bold">Seats
-                                                        :
-                                                    </span>{{this.seats}}</p>
-                                                <p class="text-truncate"><span class="font-weight-bold">Total
-                                                        Amount :
-                                                    </span>Rs.{{this.totalAmount}}</p>
-                                            </div>
-                                            <p class="{{#IF this.status '==' 'booked'}}bg-secondary{{else}}bg-danger{{/IF}}
-                                                text-center text-white text-truncate"><span
-                                                    class="font-weight-bold"></span>{{this.paymentMethod}} <span
-                                                    class="text-capitalize small">( {{this.status}} )</span></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    {{/each}}
+<section class="min-vh-100 mt-2 pt-5">
+    <div class="container mt-5">
+        <div class="headerhny-title border-light rounded p-3">
+            <div class="w3l-title-grids">
+                <div class="headerhny-left">
+                    <h3 class="hny-title m-0">My Tickets</h3>
                 </div>
             </div>
+        </div>
+        <div class="row">
+            {{#each orders}}
+            <div class="col-12 col-md-6 col-lg-4 mb-5 mb-lg-0">
+                <a href="/view-order?orderId={{this._id}}">
+                    <div class="card bg-primary shadow-soft border-light rounded animate-up-8">
+                        <div class="bg-gradient-gray-600 text-white">
+                            <p class="text-center text-monospace font-weight-bold">{{this.orderDate}}</p>
+                        </div>
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="/images/movies/posters/{{this.movieDetails._id}}.jpg" class="card-img"
+                                    style="height: 100%; object-fit: cover;">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body p-0">
+                                    <h3
+                                        class="card-title wthree text-truncate bg-orange font-weight-bold text-white text-center mb-1 py-1">
+                                        {{this.movieDetails.movieTitle}}</h3>
+                                    <div class="px-3 py-1">
+                                        <p class="card-text text-info text-truncate mb-2">
+                                            {{this.theatreDetails.theatreName}} | {{this.showDetails.screenName}}</p>
+                                        <p class="text-truncate"><span class="font-weight-bold">Seats
+                                                :
+                                            </span>{{this.seats}}</p>
+                                        <p class="text-truncate"><span class="font-weight-bold">Total
+                                                Amount :
+                                            </span>Rs.{{this.totalAmount}}</p>
+                                    </div>
+                                    <p class="{{#IF this.status '==' 'booked'}}bg-twitter{{else}}bg-danger{{/IF}} text-center text-white text-truncate"><span
+                                            class="font-weight-bold"></span>Razorpay <span
+                                            class="text-capitalize small">( {{this.status}} )</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            {{/each}}
         </div>
     </div>
 </section>
@@ -61,8 +56,7 @@
             <div class="card-body">
                 <div class="text-center">
                     <img src="/assets/images/MovieMaster-not-found.png" class="img-fluid" style="width: 15rem;">
-                    <h3 class="font-weight-normal my-3">No orders found</h3>
-                    <h6>Book Now</h6>
+                    <h3 class="font-weight-normal my-3">No tickets found</h3>
                     <a href="/now-showing-movies" class="btn btn-primary rounded-pill mt-3 px-5">Book Now</a>
                 </div>
             </div>
